[WIP] update desktop packaging